--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</ul>
 	</div>
 	<a href="index.html"> <b>RECARGAR ALGORITMO</b></a>
-	<script src="js/miarchivo2.js">
+	<script src="js/miarchivo.js">
 	</script>
 </body>
 </html>
