--- a/index.html
+++ b/index.html
@@ -2,26 +2,55 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>DESAFÍO: INCORPORAR ARRAYS</title>
+	<title>PRIMERA ENTREGA DEL PROYECTO FINAL</title>
+	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
-	<div class="formulario">
-		<h1><i>SIMULADOR INTERACTIVO DE VENTA DE COMIDA RÁPIDA</i></h1><hr>
-		<h3>DESAFÍO: INCORPORAR ARRAYS </h3>
-		<p>Algoritmo de simulación de un negocio de venta de comida rápida con la creación del menú de comida
-			como objetos con distintas propiedades mediante una función constructora, agregando los menús dentro de un array,
-			definiendo métodos y funciones que ejecuten el correcto pedido de cada menú e impriman un reporte detallado. <hr>
-			<b>Actualización:</b> Código automatizado con arrays para un mínimo de 1 menú y máximo de 8 menús si se desea 
-			un reporte detallado completo, si no se desea no hay límites para el máximo de menús.<hr>
-			</p>
+	<header> 
+		<div class="titulo">
+			<h2><i>SIMULADOR INTERACTIVO DE VENTA DE COMIDA RÁPIDA</i></h2>
+			<h3>PRIMERA ENTREGA DEL PROYECTO FINAL </h3> 
+		</div>
+		<div class="image">
+			<img src="css/comida.jpeg">
+		</div>
+	</header>
+		<div class="descripcion">
+		<h4><b>*Descripción del Proyecto:</b></h4>
+		<p>	El proyecto se basa en la creación de un Simulador Interactivo de Venta de comida rápida.<br>
+			<ul>
+				<li>En esta primera versión el simulador contará con las siguientes funcionalidades:<br><br>
+					<b>=>Selección de menús variados para distintas carteras.</b><br>
+					<b>=>Elaboración de pedidos detallados.</b><br>
+					<b>=>Cancelación de pedidos elaborados.</b><br>
+					<b>=>Mostrar la carta detallada del conjunto de menú seleccionado.</b><br>
+					<b>=>Mostrar boleta detallada del pedido y tiempo de espera total.</b><br>
+					<b>=>Opción de salida del simulador sin hacer ningún pedido.</b><br>
+				</li>
+			</ul>
+		</p><hr>
+		</div>
+		<div class="bases">
+		<b>	Base de la pre-entrega:</b> 
+			Algoritmo de simulación de un negocio de venta de comida rápida con la creación del menú de comida
+			como objetos con distintas propiedades mediante una función constructora, agregando los menús dentro de un array 
+			y aplicando un filtro para obtener nuevos arrays con variados conjuntos de menús.<br>
+			Definiendo métodos y funciones se ejecutará el correcto pedido o cancelación de cada menú e imprimirá 
+			un reporte detallado de cada menú.<br>
+			Antes de finalizar la simulación si el pedido se hizo correctamente se emitirá una boleta de venta detallada 
+			y el tiempo de espera, caso contrario solo se emitirá un mensaje por alerta y se finalizará la simulación. <hr>		
 		<ul>
-			<li>
+			<li class="alumno">
 				ALUMNO: <b>Jorge Carlos Gayoso Ugas. </b>
 			</li>
 		</ul>
 	</div>
-	<a href="index.html"> <b>RECARGAR ALGORITMO</b></a>
+	<div class="recarga">
+		<a href="index.html" > 
+			<b>RECARGAR ALGORITMO</b>
+		</a>
+	</div>
 	<script src="js/miarchivo.js">
-	</script>
+	</script>  
 </body>
 </html>
